# tesiCris_lib

./: .project  CMakeLists.txt
cmake/: FindCLIENT.cmake  FindMQTT.cmake
framework/: CMakeLists.txt
framework/client/: CMakeLists.txt
framework/client/include/tesiCris/: OPs.hpp  appStruct.hpp  argoManager.hpp  argoOPs.hpp  framework.hpp  mqtt.hpp  topics.hpp
framework/client/src/: OPs.cpp  appStruct.cpp  argoManager.cpp  argoOPs.cpp  framework.cpp  mqtt.cpp  topics.cpp
framework/config/: CMakeLists.txt  FindARGO.cmake.in  FindCLIENT.cmake.in
framework/server/: appStruct.py  configuration.py  doe.py  fcccDesign.py  fcccDesignExtra.py  ff2lDesign.py  fullFactDesign.py  lhDesign.py  libsvmFiles.py  pbDesign.py  rsm.py  server_handler.py  server_listener.py  sparkGenLinearRegr.py  sparkGenLinearRegr2nd.py
tesiCris_autotuner_manager_sample/: tesiCris_margot_manager.cpp  tesiCris_margot_manager.hpp
