################################
#### tesiCris general section
################################

# check the minimum version
cmake_minimum_required( VERSION 2.8 )

# the project name
project( tesiCris )

# The version number.
set( PROJECT_VERSION_MAJOR 2 )
set( PROJECT_VERSION_MINOR 9 )










################################
#### Option section
################################

# obtain the kind of lib
option( LIB_STATIC "Build static library" ON )










################################
#### Dependencies check
################################

# comando da inserirsi nell'applicazione che utilizza il framework

# Load additional CMake modules
# list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )

# Check for CLIENT library

# find_package( CLIENT )


list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
find_package( MQTT )










################################
#### Compile flags
################################

# force the Release build if not already setted
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif(NOT CMAKE_BUILD_TYPE)

# setting common c++ flags
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )

# setting debug flags
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -O0 -fdiagnostics-color=always")

# setting release with debug info flags
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -march=native -g3 -O2")

# setting release flags
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native -Ofast -funroll-loops -fprefetch-loop-arrays")










################################
#### Configuration section
################################

# ---- Name the framework components
# nel momento in cui ho soltanto un modulo, non è necessario specificare il nome del modulo, essendo unico
# set( CLIENT_LIB_NAME "tesiCris_client" )

# ---- Set the include directory for the project headers
# set( CLIENT_HDR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/framework/client/include )










################################
#### Build section
################################

# building the framework
add_subdirectory( framework )










##########################################
#### Install the tesiCris_client
##########################################

# install( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tesiCris_client DESTINATION lib )
# install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/tesiCris_client/lib DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
